--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "enabled",
+    "files.associations": {
+        "arrayA15Q4M2.c": "c",
+        "arrayA15Q10.c": "c"
+    }
 }
